<resources>
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="title_activity_main">Coding Tasks</string>
    <string name="button_text_main_chat">CHAT</string>
    <string name="button_text_main_login">LOGIN</string>
    <string name="button_text_main_animation">ANIMATION</string>

    <!-- Animation Screen Strings -->
    <string name="button_text_animation_fadein">FADE IN</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus.
    </string>
    <string name="title_activity_animation">Animation</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_login">Login</string>
    <string name="desc_logo">D and A Technologies Logo</string>

    <string name="chat_base_url">http://dev.rapptrlabs.com/</string>
    <string name="chat_log_endpoint">Tests/scripts/chat_log.php</string>
    <string name="login_url">https://dev.rapptrlabs.com/Tests/scripts/login.php</string>

    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>



</resources>
