<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gpc_sunset">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".login.LoginActivity"
    android:background="@drawable/layer_line"
    android:layout_marginTop="@dimen/margin_top_login_layout">
    <!-- Email Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_login_button"
        android:layout_marginTop="@dimen/margin_top_login_email"
        android:layout_marginBottom="@dimen/margin_bottom_login_email"
        android:layout_marginStart="@dimen/margin_start_login_email"
        android:layout_marginEnd="@dimen/margin_end_login_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@android:color/transparent"
        android:hint="@string/hint_login_email"
        app:hintTextColor="@color/login_hint_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_login_button"
        android:layout_marginTop="@dimen/margin_top_login_email"
        android:layout_marginBottom="@dimen/margin_bottom_login_email"
        android:layout_marginStart="@dimen/margin_start_login_email"
        android:layout_marginEnd="@dimen/margin_end_login_email"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@android:color/transparent"
        android:hint="@string/hint_login_password"
        app:hintTextColor="@color/login_hint_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_login_button"
        android:text="@string/button_text_main_login"
        android:fontFamily="@font/roboto_medium"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_top_login_button"
        android:layout_marginBottom="@dimen/margin_bottom_login_button"
        android:layout_marginStart="@dimen/margin_start_login_button"
        android:layout_marginEnd="@dimen/margin_end_login_button"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="?android:attr/colorControlHighlight"
        android:backgroundTint="?attr/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
