<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_background"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/chatButton"
        android:text="@string/button_text_main_chat"
        app:icon="@drawable/ic_chat"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginEnd="@dimen/margin_end_main_button"
        android:layout_marginStart="@dimen/margin_start_main_button"
        android:layout_marginBottom="@dimen/margin_bottom_main_button"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_main_button"
        android:background="@drawable/layer_button"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start|center"
        android:paddingStart="@dimen/padding_start_end_main_button"
        android:paddingEnd="@dimen/padding_start_end_main_button"
        android:textColor="@color/main_button_text"
        android:textSize="@dimen/text_size_main_button"
        app:backgroundTint="@null"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:iconPadding="@dimen/padding_main_button_icon" />

    <Button
        android:id="@+id/loginButton"
        android:text="@string/button_text_main_login"
        app:icon="@drawable/ic_lock"
        app:layout_constraintBottom_toTopOf="@id/animationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chatButton"
        android:layout_marginBottom="@dimen/margin_bottom_main_button"

        android:layout_marginEnd="@dimen/margin_end_main_button"
        android:layout_marginStart="@dimen/margin_start_main_button"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_main_button"
        android:background="@drawable/layer_button"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start|center"
        android:paddingStart="@dimen/padding_start_end_main_button"
        android:paddingEnd="@dimen/padding_start_end_main_button"
        android:textColor="@color/main_button_text"
        android:textSize="@dimen/text_size_main_button"
        app:backgroundTint="@null"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:iconPadding="@dimen/padding_main_button_icon"  />

    <Button
        android:id="@+id/animationButton"
        android:text="@string/button_text_main_animation"
        app:icon="@drawable/ic_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"

        android:layout_marginEnd="@dimen/margin_end_main_button"
        android:layout_marginStart="@dimen/margin_start_main_button"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_main_button"
        android:background="@drawable/layer_button"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start|center"
        android:paddingStart="@dimen/padding_start_end_main_button"
        android:paddingEnd="@dimen/padding_start_end_main_button"
        android:textColor="@color/main_button_text"
        android:textSize="@dimen/text_size_main_button"
        app:backgroundTint="@null"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:iconPadding="@dimen/padding_main_button_icon"  />

</androidx.constraintlayout.widget.ConstraintLayout>